--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "Wahyu",
   "license": "ISC",
+  "type": "module",
   "description": "",
   "devDependencies": {
     "@wdio/appium-service": "^8.39.1",
